# hybrid_controller

./: CMakeLists.txt  README.md  package.xml
include/hybrid_controller/: cable_model.hpp
src/: cable_dynamics_node.cpp  inverse_dynamics_controller_node.cpp
